log/build_2026-04-15_02-54-29/super_koka_study_pkg/stderr.log
  File "/home/koka-kolya/ros2_ws/install/super_koka_study_pkg/lib/python3.12/site-packages/super_koka_study_pkg/overflow_listener.py", line 14
    'overflow'
    ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

